update introduction prompt

--- a/ConfessChatbot.ipynb
+++ b/ConfessChatbot.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8c6b51db",
+   "id": "b375c466",
    "metadata": {},
    "source": [
     "# ConfessBot"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "e4a91a42",
+   "id": "6692a930",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "3f1dccb9",
+   "id": "1f3d9d78",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "ba62d20d",
+   "id": "b76ad690",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71f08def",
+   "id": "1009aadc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,8 +116,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "dd1e5a12",
+   "execution_count": null,
+   "id": "b14d5bd9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "messages =  context.copy()\n",
+    "messages.append(\n",
+    "{'role':'system', 'content':'write a discription for yourself, focusing on your functionality'},    \n",
+    ")\n",
+    "\n",
+    "response = get_completion_from_messages(messages, temperature=0)\n",
+    "print(response)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "169a1ba9",
    "metadata": {},
    "outputs": [],
    "source": []
